tdf#143368 sw CHAR_DLG_FOR_PARAGRAPH: restore selection

When the dialog was made asynchronous,
as soon as the dialog launched, the artificial selection
clean-up code was called.

Instead, just pass on the intention that the paragraph
should be selected.

Note that we are still hoping that the cursor
doesn't change position or anything strange like that.

Change-Id: I6e618c92f2655ffcbf8b6f2029af893e7df30017
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151678
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>